save change for "Domain Configuration"

--- a/code/index.html
+++ b/code/index.html
@@ -20,6 +20,7 @@
 
   <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css"/>
   <link rel="stylesheet" href='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.css' rel="stylesheet">
+   <link rel="stylesheet" href='bower_components/angular-bootstrap-toggle-switch/style/bootstrap3/angular-toggle-switch-bootstrap-3.css' rel="stylesheet">
 <!-- highlight.js -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css">
   <!-- Angular -->
@@ -88,8 +89,10 @@
 <script type="text/javascript" src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-datatables/dist/angular-datatables.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.min.js"></script>
-<script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-<script src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
+<script type="text/javascript" src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+<script type="text/javascript" src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
+<script type="text/javascript" src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
+
 
 <script src="config.js"></script>
 
