--- a/code/parts/domains/edit.html
+++ b/code/parts/domains/edit.html
@@ -5,128 +5,61 @@
     </h2>
   </div>
 </div>
-
 <div class="row" ng-init="getDomain(params.id)">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-
         <div class="row">
           <div class="col-md-12">
             <div class="pull-left">
-              <a ui-sref="^"
-                 ng-disabled="_loading"
-                 class="btn btn-default">
-                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                Back To List
+              <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
+                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
               </a>
-              <a ui-sref="^.advanced({id: params.id})"
-                 ng-disabled="_loading"
-                 class="btn btn-info">
-
-                <i class="glyphicon glyphicon-cog"></i>&nbsp;
-                Advanced Mode
+              <a ui-sref="^.advanced({id: params.id})" ng-disabled="_loading" class="btn btn-info">
+                <i class="glyphicon glyphicon-cog"></i>&nbsp; Advanced Mode
               </a>
             </div>
           </div>
         </div>
-
       </div>
       <div class="panel-body">
         <form class="form-horizontal">
           <div class="form-group">
-            <label for="domain_name"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   >Domain Name</label>
-
-            <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     disabled
-                     autofocus
-                     ng-model="model.domain_name"
-                     id="domain_name"
-                     placeholder="Domain Name">
+            <label for="domain_name" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain Name</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" disabled autofocus ng-model="model.domain_name" id="domain_name" placeholder="Domain Name">
             </div>
           </div>
           <div class="form-group">
-            <label for="cname"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   >Domain CNAME</label>
-
-            <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     disabled
-                     ng-model="model.cname"
-                     id="cname"
-                     placeholder="Domain CNAME">
+            <label for="cname" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain CNAME</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" disabled ng-model="model.cname" id="cname" placeholder="Domain CNAME">
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="account_id"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   popover="Select company name the domain should be associated with">Company</label>
-
-            <div class="col-sm-10">
-              <select class="form-control"
-                      ng-disabled="_loading"
-                      ng-model="model.account_id"
-                      id="account_id"
-                      ng-options="obj.id as obj.companyName for obj in companies">
+            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" popover="Select company name the domain should be associated with">Company</label>
+            <div class="col-sm-9">
+              <select class="form-control" ng-disabled="_loading" ng-model="model.account_id" id="account_id" ng-options="obj.id as obj.companyName for obj in companies">
                 <option value="">--- Select Company ---</option>
               </select>
             </div>
           </div>
           <div class="form-group">
-            <label for="origin_server"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   popover="Enter here domain name or IP address of origin web server">Origin Server Name/IP</label>
-
-            <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     ng-disabled="_loading"
-                     ng-model="model.origin_server"
-                     id="origin_server"
-                     placeholder="Origin Server Name">
+            <label for="origin_server" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" popover="Enter here domain name or IP address of origin web server">Origin Server Name/IP</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" ng-disabled="_loading" ng-model="model.origin_server" id="origin_server" placeholder="Origin Server Name">
             </div>
           </div>
           <div class="form-group">
-            <label for="origin_host_header"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   popover="Enter here a domain name to be used in 'Host' header in requests sent from RevAPM to the origin server">Origin Host Header</label>
-
-            <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     ng-model="model.origin_host_header"
-                     ng-disabled="_loading"
-                     id="origin_host_header"
-                     placeholder="Origin Host Header">
+            <label for="origin_host_header" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" popover="Enter here a domain name to be used in 'Host' header in requests sent from RevAPM to the origin server">Origin Host Header</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" ng-model="model.origin_host_header" ng-disabled="_loading" id="origin_host_header" placeholder="Origin Host Header">
             </div>
           </div>
           <div class="form-group">
-            <label for="origin_server_location_id"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   popover="Select a RevAPM location closest to the location of the origin server">Domain Origin Location</label>
-
-            <div class="col-sm-10">
-              <select class="form-control"
-                      ng-disabled="_loading"
-                      ng-model="model.origin_server_location_id"
-                      id="origin_server_location_id"
-                      ng-options="obj.id as obj.locationName for obj in locations">
+            <label for="origin_server_location_id" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" popover="Select a RevAPM location closest to the location of the origin server">Domain Origin Location</label>
+            <div class="col-sm-9">
+              <select class="form-control" ng-disabled="_loading" ng-model="model.origin_server_location_id" id="origin_server_location_id" ng-options="obj.id as obj.locationName for obj in locations">
                 <option value="">--- Select Location ---</option>
               </select>
             </div>
@@ -135,11 +68,11 @@
           <div class="form-group">
             <label for="tolerance"
                    popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
+                   class="col-sm-3 control-label"
                    popover-trigger="mouseenter"
                    popover="Web page performance threshold used for RUM heatmap report. Recommended value is 3000 ms.">Threshold</label>
 
-            <div class="col-sm-10">
+            <div class="col-sm-9">
               <input type="text"
                      class="form-control"
                      ng-disabled="_loading"
@@ -149,37 +82,168 @@
             </div>
           </div>
           -->
-          <hr>
+        <!--   <hr> -->
+          <!-- Origin Communication Protocol -->
+          <div class="form-group form-inline">
+            <label for="origin_secure_protocol" class="col-sm-3 control-label">
+              Origin Communication Protocol
+            </label>
+            <div class="col-md-9">
+              <label class="radio-inline">
+                <input type="radio" ng-model="model.origin_secure_protocol" value="use_end_user_protocol">Use End User Protocol
+              </label>
+              <label class="radio-inline">
+                <input type="radio" ng-model="model.origin_secure_protocol" value="https_only">HTTPS Only
+              </label>
+              <label class="radio-inline">
+                <input type="radio" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
+              </label>
+            </div>
+          </div>
+          <!-- // -->
+          <!-- "Non-Wildcard Domain Aliases" -->
+          <div class="form-group">
+            <label for="domain_aliases" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" popover="Non-Wildcard Domain Aliases">Non-Wildcard Domain Aliases</label>
+            <div class="col-sm-9">
+              <ui-select tagging tagging-label="Add New Domain" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.domain_aliases" id="domain_aliases">
+                <ui-select-match placeholder="Add domains...">{{$item}}</ui-select-match>
+                <ui-select-choices repeat="domain in model.domain_aliases">
+                  {{domain}}
+                </ui-select-choices>
+              </ui-select>
+            </div>
+          </div>
+          <!-- // -->
+          <!-- Wildcard Domain Alias -->
+          <div class="form-group form-inline">
+            <label for="origin_secure_protocol" class="col-sm-3 control-label">
+              Wildcard Domain Alias
+            </label>
+            <div class="col-md-9">
+              <input type="text" class="form-control" ng-model="model.domain_wildcard_alias">
+            </div>
+          </div>
+          <!-- -->
+          <!-- Data Read Timeout, seconds -->
+          <div class="form-group form-inline">
+            <label for="origin_secure_protocol" class="col-sm-3 control-label">
+              Data Read Timeout
+            </label>
+            <div class="col-md-9">
+              <input type="number" class="form-control" ng-model="model.proxy_timeout" min="0" max="120"> second(s)
+            </div>
+          </div>
+          <!-- -->
+          <!-- Last Mile QUIC Protocol -->
+          <div class="form-group form-inline">
+            <label for="rev_component_bp_enable_quic" class="col-sm-3 control-label">
+              Last Mile QUIC Protocol
+            </label>
+            <div class="col-md-9">
+              <toggle-switch ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
+              </toggle-switch>
+            </div>
+          </div>
+          <!-- Block All Web Crawlers  -->
+          <div class="form-group form-inline">
+            <label for="block_crawlers" class="col-sm-3 control-label">
+              Block All Web Crawlers
+            </label>
+            <div class="col-md-9">
+              <toggle-switch ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
+              </toggle-switch>
+            </div>
+          </div>
+          <!-- Edge Caching -->
+          <div class="form-group form-inline">
+            <label for="enable_cache" class="col-sm-3 control-label">
+              Edge Caching
+            </label>
+            <div class="col-md-9">
+              <toggle-switch ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
+              </toggle-switch>
+            </div>
+          </div>
+            <hr>
+          <!-- Caching Rules -->
+          <div class="panel panel-default" ng-if="model.rev_component_bp.enable_cache">
+            <div class="panel-heading">
+              <h4><span ng-click="onAddNewCachingRule()" class="btn btn-primary pull-right" title="Add New Caching Rule"><i class="glyphicon glyphicon-plus"></i></span> Caching Rules</h4>
+            </div>
+            <div class="panel-body">
+              <!-- TODO: creater directive -->
+              <div class="panel panel-default component__domain_caching_rules" ng-repeat="caching_rule in model.rev_component_bp.caching_rules">
+                <div class="panel-heading">
+                  <h3 class="panel-title">
+ Rule index: {{$index}}
+   <!-- <i class="glyphicon glyphicon-star"></i> -->
+
+  <span class="pull-right">
+    <a href="" title="Reload Widget Content" ng-if="widget.reload" ng-click="reload()">
+      <i class="glyphicon glyphicon-refresh"></i>
+    </a>
+    <!-- collapse -->
+    <a href="" title="Collapse Rule" ng-show="!options.collapsible && !caching_rule.$cachingRuleState" ng-click="caching_rule.$cachingRuleState = !caching_rule.$cachingRuleState">
+      <i class="glyphicon glyphicon-minus"></i>
+    </a>
+    <!-- expand -->
+    <a href="" title="Expand Rule" ng-show="!options.collapsible && caching_rule.$cachingRuleState" ng-click="caching_rule.$cachingRuleState = !caching_rule.$cachingRuleState">
+      <i class="glyphicon glyphicon-plus"></i>
+    </a>
+    <!-- change widget location -->
+    <a href="" title="Change Widget Location" class="adf-move" ng-if="editMode">
+      <i class="glyphicon glyphicon-move"></i>
+    </a>
+    <!-- open edit mode -->
+    <a href="" title="Edit Widget Configuration" ng-click="edit()" ng-if="editMode">
+      <i class="glyphicon glyphicon-cog"></i>
+    </a>
+    <a href="" title="Fullscreen Widget" ng-click="openFullScreen()" ng-show="options.maximizable">
+     <i class="glyphicon glyphicon-fullscreen"></i>
+   </a>
+    <!-- remove widget -->
+    <a href="" title="Remove Rule" ng-click="onRemoveCachingRule($index)" ng-if="!editMode">
+      <i class="glyphicon glyphicon-remove"></i>
+    </a>
+  </span>
+</h3>
+                </div>
+                <domain-caching-rule class="panel-body" ng-model="caching_rule" ng-show="!caching_rule.$cachingRuleState"></domain-caching-rule>
+              </div>
+            </div>
+          </div>
+          <!-- Cache Bypass Locations -->
+          <div class="form-group">
+            <label class="col-sm-3 control-label">Cache Bypass Locations</label>
+            <div class="col-sm-9">
+              <ui-select tagging tagging-label="Add Cache Bypass Locations" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.rev_component_bp.cache_bypass_locations" id="domain_aliases">
+                <ui-select-match placeholder="Add Cache Bypass Locations...">{{$item}}</ui-select-match>
+                <ui-select-choices repeat="bypass_locations in model.rev_component_bp.cache_bypass_locations">
+                  {{bypass_locations}}
+                </ui-select-choices>
+              </ui-select>
+            </div>
+          </div>
+          <!-- -->
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <a ui-sref="^" class="btn btn-default">
-                <i class="glyphicon glyphicon-remove"></i>&nbsp;
-                Cancel
+                <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-info"
-                      ng-disabled="_loading"
-                      ng-click="validateDomain(model)">
+              <button class="btn btn-info" ng-disabled="_loading" ng-click="validateDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-check" ng-if="!_loading"></i>&nbsp;
-                Verify
+                <i class="glyphicon glyphicon-check" ng-if="!_loading"></i>&nbsp; Verify
               </button>
-              <button class="btn btn-success"
-                      ng-disabled="_loading"
-                      ng-click="updateDomain(model)">
+              <button class="btn btn-success" ng-disabled="_loading" ng-click="updateDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-file" ng-if="!_loading"></i>&nbsp;
-                Update
+                <i class="glyphicon glyphicon-file" ng-if="!_loading"></i>&nbsp; Update
               </button>
-              <button class="btn btn-success"
-                      ng-disabled="_loading"
-                      ng-click="publishDomain(model)">
+              <button class="btn btn-success" ng-disabled="_loading" ng-click="publishDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
-                Publish
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Publish
               </button>
             </div>
           </div>
-
         </form>
       </div>
     </div>
