Add new directives for the module "domain"

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -180,6 +180,8 @@
 <script type="text/javascript" src="js/portal/domains/domain-select/domainSelect.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-staging-status/domainStagingStatus.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/origin-request-headers/originRequestHeaders.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/end-user-response-headers/endUserResponseHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainsCrud.controller.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainConfigureAdvanced.controller.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainVersions.controller.js"></script>
