--- a/code/parts/domains/edit.html
+++ b/code/parts/domains/edit.html
@@ -182,10 +182,10 @@
           <div class="panel panel-default caching-rules-list" ng-if="model.rev_component_bp.enable_cache">
             <div class="panel-heading">
               <span class="pull-left panel-buttons-left">
-                <a ng-show="!isCollapsedAll" class="btn btn-default btn-md " ng-click="onCollapsAllCachingRule()" title="Collapse All Rules" ng-show="!isCollapsedAll">
+                <a class="btn btn-default btn-md " ng-click="onCollapsAllCachingRule()" title="Collapse All Rules" ng-show="!isCollapsedAll">
                   <i class="glyphicon glyphicon-chevron-up "></i>
                 </a>
-                <a  ng-show="isCollapsedAll" class="btn btn-default btn-md " ng-click="onExpandAllCachingRule()" title="Expand All Rules">
+                <a class="btn btn-default btn-md " ng-click="onExpandAllCachingRule()" title="Expand All Rules">
                   <i class="glyphicon glyphicon-chevron-down"></i>
                 </a>
               </span>
