change “Regular Expression Only” to “Regular Expression”

--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -3,7 +3,7 @@
     <label class="col-md-3 control-label">URL</label>
     <div class=" col-md-9">
       <label class="radio-inline">
-        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="true">Regular Expression Only
+        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="true">Regular Expression
       </label>
       <label class="radio-inline">
         <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="false">Wildcard Pattern
