Change the text into deletion confirmation window and sets default value for "Origin Communication Protocol"

--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -12,7 +12,6 @@
     <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-
 <script type="text/ng-template" id="confirmUpdateModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Confirm</h3>
@@ -26,7 +25,6 @@
     <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-
 <script type="text/ng-template" id="confirmPublishModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Confirm</h3>
@@ -40,18 +38,18 @@
     <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-  <script type="text/ng-template" id="confirmModalDeleteCachingRule.html">
-    <div class="modal-header">
-      <h3 class="modal-title">Confirm</h3>
-    </div>
-    <div class="modal-body">
-      Are you sure you want to delete Caching Rule "{{model.url}}"?
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-      <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
-    </div>
-  </script>
+<script type="text/ng-template" id="confirmModalDeleteCachingRule.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Confirm</h3>
+  </div>
+  <div class="modal-body">
+    Are you sure you want to delete caching rule for URL<span ng-if="model.url.value"> "{{model.url.value}}"</span>?
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
+  </div>
+</script>
 <div class="container-fluid" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
@@ -60,7 +58,6 @@
       </h2>
     </div>
   </div>
-
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
@@ -69,19 +66,15 @@
             <div class="col-md-12">
               <div class="pull-left">
                 <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
-                  <i class="glyphicon glyphicon-plus"></i>&nbsp;
-                  Add New Domain
+                  <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New Domain
                 </a>
               </div>
-
               <div class="pull-right">
                 <form class="form-inline">
                   <div class="form-group">
                     <label for="search">Search:&nbsp;</label>
-                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter"
-                           ng-change="checkFilterPage()">&nbsp;&nbsp;
-                    <i class="glyphicon glyphicon-remove" ng-show="filter.filter != ''"
-                       ng-click="filter.filter = ''"></i>
+                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter" ng-change="checkFilterPage()">&nbsp;&nbsp;
+                    <i class="glyphicon glyphicon-remove" ng-show="filter.filter != ''" ng-click="filter.filter = ''"></i>
                   </div>
                 </form>
               </div>
@@ -93,69 +86,67 @@
             Currently you don't have any web domains registered in the system. You can click on "Add New Domain" button above to add a domain.
           </div>
           <div class="alert alert-info" ng-if="_loading">
-            <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
-            Loading...
+            <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
           <crud-pagination></crud-pagination>
           <table class="table">
             <thead>
-            <tr>
-              <th>
-                <a href="" ng-click="order('domain_name')">Name</a>
-                <span class="sortorder" ng-show="filter.predicate === 'domain_name'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('cname')">CNAME</a>
-                <span class="sortorder" ng-show="filter.predicate === 'cname'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('updated_at')">Last Update</a>
-                <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th class="thin">Status</th>
-              <th>Actions</th>
-            </tr>
+              <tr>
+                <th>
+                  <a href="" ng-click="order('domain_name')">Name</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'domain_name'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('cname')">CNAME</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'cname'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('updated_at')">Last Update</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th class="thin">Status</th>
+                <th>Actions</th>
+              </tr>
             </thead>
             <tbody>
-            <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)"
-              ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-              <td>
-                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
+              <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+                <td>
+                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
                   {{item.domain_name}}
                 </a>
-              </td>
-              <td>{{item.cname}}</td>
-              <td>{{ getRelativeDate(item.updated_at) }}</td>
-              <td>
-                <div domain-staging-status ng-id="item.id"></div>
-              </td>
-              <td class="actions">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
-                  <i class="glyphicon glyphicon-pencil"></i>
-                </a>
-                <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
-                  <i class="glyphicon glyphicon-cog"></i>
-                </a>
-                <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete Domain">
-                  <i class="glyphicon glyphicon-trash"></i>
-                </a>
-                <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
-                  <i class="glyphicon glyphicon-stats"></i>
-                </a>
-                <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Previous Versions">
-                  <i class="glyphicon glyphicon-book"></i>
-                </a>
-              </td>
-            </tr>
-            <!--<tr class="disabled loading">-->
-            <!--<td>John</td>-->
-            <!--<td>Doe</td>-->
-            <!--<td>Monday, Aug 10, 2015, 8:31 PM</td>-->
-            <!--<td class="actions">-->
-            <!--<i class="glyphicon glyphicon-refresh spin"></i>-->
-            <!--</td>-->
-            <!--</tr>-->
+                </td>
+                <td>{{item.cname}}</td>
+                <td>{{ getRelativeDate(item.updated_at) }}</td>
+                <td>
+                  <div domain-staging-status ng-id="item.id"></div>
+                </td>
+                <td class="actions">
+                  <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
+                    <i class="glyphicon glyphicon-pencil"></i>
+                  </a>
+                  <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
+                    <i class="glyphicon glyphicon-cog"></i>
+                  </a>
+                  <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete Domain">
+                    <i class="glyphicon glyphicon-trash"></i>
+                  </a>
+                  <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
+                    <i class="glyphicon glyphicon-stats"></i>
+                  </a>
+                  <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Previous Versions">
+                    <i class="glyphicon glyphicon-book"></i>
+                  </a>
+                </td>
+              </tr>
+              <!--<tr class="disabled loading">-->
+              <!--<td>John</td>-->
+              <!--<td>Doe</td>-->
+              <!--<td>Monday, Aug 10, 2015, 8:31 PM</td>-->
+              <!--<td class="actions">-->
+              <!--<i class="glyphicon glyphicon-refresh spin"></i>-->
+              <!--</td>-->
+              <!--</tr>-->
             </tbody>
           </table>
           <hr>
