Fix the width of “Wildcard Domain Alias” field

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -115,7 +115,7 @@
           </div>
           <!-- // -->
           <!-- Wildcard Domain Alias -->
-          <div class="form-group form-inline">
+          <div class="form-group">
             <label for="origin_secure_protocol" class="col-sm-3 control-label">
               Wildcard Domain Alias
             </label>
