Change field “Keep Or Drop Query String Parameters” (a switch between “Keep” and “Drop” )

--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -44,7 +44,7 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Keep Or Drop Query String Parameters</label>
     <div class="col-sm-9">
-      <toggle-switch ng-model="$ctrl.caching_rule.edge_caching.query_string_list_is_keep" on-label="On" off-label="Off">
+      <toggle-switch ng-model="$ctrl.caching_rule.edge_caching.query_string_list_is_keep" on-label="Keep" off-label="Drop">
       </toggle-switch>
     </div>
   </div>
