Fix a message confirmed delete caching rule

--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -43,7 +43,7 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Are you sure you want to delete caching rule for URL<span ng-if="model.url.value"> "{{model.url.value}}"</span>?
+    Are you sure you want to delete caching rule<span ng-if="model.url.value"> for URL "{{model.url.value}}"</span>?
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
